[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world/world.gd" type="Script" id=2]
[ext_resource path="res://scenes/world/checkpoint.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 237, 220 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
margin_left = -200.0
margin_top = -10.0
margin_right = 200.0
margin_bottom = 10.0

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 1 )]
position = Vector2( 237, 178 )
z_index = 10

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="GameOver" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.5
margin_top = -20.0
margin_right = 36.5
margin_bottom = 20.0

[node name="Label" type="Label" parent="CanvasLayer/Control/GameOver"]
margin_right = 73.0
margin_bottom = 14.0
text = "Game Over"

[node name="Restart" type="Button" parent="CanvasLayer/Control/GameOver"]
margin_top = 18.0
margin_right = 73.0
margin_bottom = 38.0
text = "Retry"

[node name="Node2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 329, 162 )
scale = Vector2( 2, 2 )

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="pressed" from="CanvasLayer/Control/GameOver/Restart" to="." method="_on_Restart_pressed"]
